--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "sinon-chai": "^2.5.0"
   },
   "dependencies": {
+    "@hoist/errors": "^1.0.3",
+    "@hoist/logger": "^1.0.5",
     "bluebird": "^2.3.11",
     "config": "^1.8.1",
-    "hoist-logger": "git://github.com/hoist/hoist-logger",
-    "hoist-errors": "git://github.com/hoist/hoist-errors",
     "lodash": "^2.4.1",
     "request": "^2.48.0",
     "request-promise": "^0.3.2"
